--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 .DS_Store
+
+*.xcuserstate
+
+JVFloatLabeledTextField.xcodeproj/xcuserdata/VictorJiang.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
